--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="he" dir="rtl">
   <head>    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+    <meta name="theme-color" content="#1e293b" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="וורדעלישס" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="וורדל עברי לבני נוער - משחק ניחוש מילים בעברית עם נושאים מגניבים"
     />
+    <meta name="keywords" content="וורדל, עברית, משחק, מילים, בני נוער, ישראל" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@100..900&display=swap" rel="stylesheet">    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -26,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>וורדעלישס - וורדל עברי לבני נוער</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
